--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap');
 
+header{
+    background-color: antiquewhite;
+}
+
+
 
 *{
     padding: 0;
@@ -12,7 +17,7 @@
 nav{
     display: flex;
     justify-content: space-between;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     margin: 40px 200px;
 }
 .nav_bar{
@@ -29,7 +34,7 @@ nav{
     background-color: #FD6E0A;
     color: white;
     width: 100px;
-    height: max-content;
+    height: ;
 }
 
 .nav_bar > ul >li{
