--- a/styles/intro.css
+++ b/styles/intro.css
@@ -2,26 +2,28 @@
 
 
 
-.introduction{
+.introduction {
     margin-left: 200px;
     margin-top: 200px;
     display: flex;
 }
 
-.introduction > .name_about > h4{
+.introduction>.name_about>h4 {
     /* background-color: aqua; */
 }
 
-.cv_contact{
+.cv_contact {
     display: flex;
 }
-.cv , .contact{
+
+.cv,
+.contact {
     margin-right: 60px;
     margin-top: 50px;
 }
 
 
-.Download{
+.Download {
     text-decoration: none;
     color: white;
     background-color: #FD6E0A;
@@ -29,30 +31,33 @@
     width: 180px;
     border-radius: 8px;
     font-size: larger;
-    border-color:#FD6E0A ;
-       
+    border: 1px solid #FD6E0A;
+
 }
-.contact > button{
+
+.contact>button {
     text-decoration: none;
     font-size: larger;
     height: 50px;
     width: 140px;
     border-radius: 8px;
     background-color: white;
-    color:#FD6E0A ;
-    border-color:#FD6E0A ;
+    color: #FD6E0A;
+    border-color: #FD6E0A;
 }
 
-.image_description{
+.image_description {
     /* background-color: rgb(244, 155, 155); */
     position: relative;
 }
-.bgm{
+
+.bgm {
     position: relative;
     right: 0px;
     bottom: 0px;
 }
-.hardy{
+
+.hardy {
     position: absolute;
     left: 200px;
     bottom: 0px;
