--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,50 +1,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap');
 
-header{
-    background-color: antiquewhite;
-}
-
-
-
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
 
+header {
+    background-color: antiquewhite;
+    padding-top: 60px;
+}
+
+
+
+
+
 /* nav section---------------------------------------- */
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     /* background-color: antiquewhite; */
-    margin: 40px 200px;
+    /* margin: 40px 200px; */
+    margin: 0 200px 40px 200px;
 }
-.nav_bar{
+
+.nav_bar {
     /* background-color: aqua; */
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.nav_bar > ul{
+.nav_bar>ul {
     display: flex;
 }
-.Hire_me{
+
+.Hire_me {
     background-color: #FD6E0A;
     color: white;
     width: 100px;
-    height: ;
+    border: 1px solid #FD6E0A;
+    font-size: 20px;
+    border-radius: 6px;
 }
 
-.nav_bar > ul >li{
+.nav_bar>ul>li {
     list-style: none;
     margin-right: 60px;
     font-weight: 00;
 
 }
 
-.nav_bar > ul >li > a{
+.nav_bar>ul>li>a {
     text-decoration: none;
     font-family: 'Open Sans', sans-serif;
     font-size: 18px;
