--- a/styles/mainboy.css
+++ b/styles/mainboy.css
@@ -171,5 +171,7 @@ textarea {
     margin: 20px 0 20px 0;
     border-radius: 8px;
     border: 1px solid white;
+    resize: none;
+    padding: 20px;
 
 }
