--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -43,9 +43,12 @@ nav {
     border: 1px solid #FD6E0A;
     font-size: 20px;
     border-radius: 6px;
+    padding: 5px 2px 5px 2px;
 }
 
 .nav_bar>ul>li {
+    display: flex;
+    align-items: center;
     list-style: none;
     margin-right: 60px;
     font-weight: 00;
